syntax = "proto3";

package runtime;

service RuntimeService {
  rpc Ping (PingRequest) returns (PingResponse);
}

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
}
